# axum_frontend_include_dir

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/routes/: frontend.rs  healthcheck.rs  mod.rs
